--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -5,4 +5,9 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Print greeting
-              run: echo "Hi, World!"
+              run: echo "Hi, World!" 
+            - name: Print a few lines
+              run: |
+                echo first line
+                echo second line
+                echo third line
